<resources>
    <string name="app_name">Screen Application</string>
    <string name="Editar">editar</string>
    <string name="title_activity_cadastrar">CadastrarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="titulo">Título</string>
    <string name="materia">Matéria</string>
    <string name="cancelar">Cancelar</string>
    <string name="adicionar">Adicionar</string>
    <string name="codigo">Código</string>
    <string name="codigoId">Código Id</string>
</resources>