<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/textCodigo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="66.6"
        android:gravity="center"
        android:text="@string/codigo"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="33.3">

        <TextView
            android:id="@+id/textMateria"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/materia" />

        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/titulo" />

    </LinearLayout>


</LinearLayout>